[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Rust utility functions provided by MaidSafe."
documentation = "https://docs.rs/maidsafe_utilities"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "maidsafe_utilities"
readme = "README.md"
repository = "https://github.com/maidsafe/maidsafe_utilities"
version = "0.12.0"

[dependencies]
bincode = "~0.8.0"
config_file_handler = "~0.7.0"
lazy_static = "~0.2.5"
log = "~0.3.7"
log4rs = "~0.7.0"
quick-error = "~1.1.0"
rand = "~0.3.15"
regex = "~0.1.77"
serde = "~1.0.2"
serde-value = "~0.5.0"
unwrap = "~1.1.0"
ws = "~0.7.0"
