[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Rust utility functions provided by MaidSafe."
documentation = "https://docs.rs/maidsafe_utilities"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "maidsafe_utilities"
readme = "README.md"
repository = "https://github.com/maidsafe/maidsafe_utilities"
version = "0.18.0"
edition = "2018"

[dependencies]
bincode = "~0.8.0"
config_file_handler = "~0.11.0"
lazy_static = "~0.2.8"
log = "~0.3.8"
log4rs = {version = "~0.7.0", features=["toml_format"]}
quick-error = "~1.2.0"
rand = "~0.3.15"
regex = "~0.2.2"
serde = "~1.0.91"
serde-value = "~0.5.1"
unwrap = "~1.2.0"
url = "~1.7.2"
ws = "~0.7.3"

[features]
testing = []
